Commiting master updates, database mods

--- a/clientSide/src/component/css/auth.css
+++ b/clientSide/src/component/css/auth.css
@@ -10,6 +10,14 @@
     max-width: 320px;
   }
 
+  .SignUp .basic-multi-select {
+    color: black;
+  }
+
+  .SignUp .Submit {
+    margin: 20px 0;
+  }
+
 
   .LoginBody{
     margin-top: 20px;
