--- a/clientSide/src/component/css/landing.css
+++ b/clientSide/src/component/css/landing.css
@@ -1,10 +1,20 @@
 @media all {
-  .Landing {
-    position: absolute;
-    background-size: cover;
+
+  /* Full page responsive background image */
+  img.bg {
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
+
+    /* Set up proportionate scaling */
     width: 100%;
-    height: 100%;
-    background-image: url("https://4dttx13zn7901db8sx1mg5n8-wpengine.netdna-ssl.com/wp-content/uploads/2017/10/iStock-492654918-1024x680.jpg");
+    height: auto;
+
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
 
   .Body{
