--- a/clientSide/src/component/css/home.css
+++ b/clientSide/src/component/css/home.css
@@ -3,3 +3,21 @@
     text-align: center;
   }
 }
+
+/* Full page responsive background image */
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  background-size: cover;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
