--- a/clientSide/src/component/css/auth.css
+++ b/clientSide/src/component/css/auth.css
@@ -19,6 +19,8 @@
 
   .SignUp .Submit {
     margin: 20px 0;
+    background-color: #3c9bc5;
+    opacity: 1;
   }
 
   .LoginBody {
@@ -28,13 +30,21 @@
     text-align: center;
   }
 
+ 
   .loginBtn.disabled, .loginBtn[disabled], fieldset[disabled] .loginBtn {
-    opacity: 1;
+    opacity: 0.5;
+    background-color: gray;
+  }
+
+  .SignUp .Submit.disabled, .SignUp .Submit[disabled], fieldset[disabled] .SignUp .Submit {
+    opacity: 0.5;
+    background-color: gray;
   }
 
   .loginBtn {
     color: white;
     background-color: #3c9bc5;
+    opacity: 1;
   }
 
   .Login {
