--- a/clientSide/src/component/css/home.css
+++ b/clientSide/src/component/css/home.css
@@ -1,9 +1,3 @@
-@media all and (min-width: 480px) {
-  .Table {
-    text-align: center;
-  }
-}
-
 /* Full page responsive background image */
 img.bg {
   /* Set rules to fill background */
@@ -20,4 +14,41 @@ img.bg {
   top: 0;
   left: 0;
   z-index: -1;
+}
+
+.table {
+  border-radius: 15px;
+  border-color: transparent;
+}
+
+.addPost .basic-multi-select {
+  width: 110px;
+  color: black;
+  opacity: 1;
+}
+
+.addPost .inlineSelect {
+  display: inline-block;
+}
+
+.addPost {
+  color: black;
+  border-radius: 5px;
+  background-color: white;
+}
+
+form #locationField {
+  width: 100px;
+}
+
+form #courseTitle {
+  margin: 8px;
+}
+
+form #locationTitle {
+  margin: 8px;
+}
+
+form #postButton {
+  margin: 8px;
 }
