--- a/clientSide/src/component/css/resources.css
+++ b/clientSide/src/component/css/resources.css
@@ -14,3 +14,11 @@
     left: 0;
     z-index: -1;
   }
+
+  .Header{
+    text-align: center;
+    color: white;
+    float: right;
+    width: 100%;
+    font-size: 42px;
+  }
