--- a/clientSide/src/component/css/home.css
+++ b/clientSide/src/component/css/home.css
@@ -36,34 +36,37 @@ img.bg {
   border-radius: 5px;
   background-color: white;
   padding: 5px;
+  margin-bottom: 20px;
 }
 
-form #locationField {
+.addPost #locationField {
   width: 100px;
 }
 
-form .submitForm {
+.addPost .submitForm {
   display: inline-block;
 }
 
-form #noteField {
+.addPost #noteField {
   width: 400px;
   margin-right: 20px;
   display: inline-block;
 }
 
-form #courseTitle {
+.addPost #courseTitle {
   margin: 0px 20px 0px 6px;
 }
 
-form #locationTitle {
+.addPost #locationTitle {
   margin: 0px 20px;
 }
 
-form #noteTitle {
+.addPost #noteTitle {
   margin: 0px 20px;
+  display: inline-block;
 }
 
-form .subBtn {
+.addPost .submitBtnForm {
   width: 100px;
+  display: inline-block;
 }
