--- a/clientSide/src/component/css/resources.css
+++ b/clientSide/src/component/css/resources.css
@@ -1,19 +1,20 @@
 /* Full page responsive background image */
   img.bg {
-    /* Set rules to fill background */
-    min-height: 100%;
-    min-width: 1024px;
+      /* Set rules to fill background */
+      min-height: 100%;
+      min-width: 1024px;
+      background-size: cover;
 
-    /* Set up proportionate scaling */
-    width: 100%;
-    height: auto;
+      /* Set up proportionate scaling */
+      width: 100%;
+      height: auto;
 
-    /* Set up positioning */
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
+      /* Set up positioning */
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+}
 
   .Header{
     text-align: center;
