--- a/clientSide/src/component/css/BotNav.css
+++ b/clientSide/src/component/css/BotNav.css
@@ -1,10 +1,19 @@
 .example{
-position:absolute;
+position:fixed;
 left:0;
 bottom:0;
 right:0;
 transform: translateY(30%);
-background-color:black;
+background-color: #222;
+margin-top: 10%;
 width:100%;
-color:white;
+color:white; 
+}
+
+a{
+	color: #9d9d9d;
+}
+a:hover{ 
+	text-decoration: none;
+	color: white;
 }
