--- a/clientSide/src/component/css/BotNav.css
+++ b/clientSide/src/component/css/BotNav.css
@@ -17,3 +17,14 @@ a:hover{
 	text-decoration: none;
 	color: white;
 }
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
