--- a/clientSide/src/component/css/BotNav.css
+++ b/clientSide/src/component/css/BotNav.css
@@ -1,10 +1,20 @@
 .example{
-position:absolute;
-left:0;
-bottom:0;
-right:0;
-transform: translateY(30%);
+position:fixed;
+left:0px;
+bottom:0px;
+right:0px;
+/* transform: translateY(30%); */
 background-color:black;
 width:100%;
 color:white;
+}
+
+.navRow {
+  text-align: center;
+  justify-content: center;
+}
+
+.navItem {
+  float:right;
+  margin-left: 30px;
 }
